// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
.c0 {
  position: relative;
}

.c1 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
  padding: 0.5rem;
}

.c1 p {
  padding-bottom: 0.5rem;
}

.c1 p:last-child {
  padding-bottom: 0;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    body
  </div>
</div>
`;

exports[`it works with heading 1`] = `
.c0 {
  position: relative;
}

.c1 {
  font-size: 1.875rem;
  font-family: Montserrat,sans-serif;
  line-height: 1.25;
  font-weight: 500;
  color: #292B3E;
  padding: 0.5rem;
}

.c2 {
  font-size: 1rem;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  font-weight: 400;
  color: #292B3E;
  padding: 0.5rem;
}

.c2 p {
  padding-bottom: 0.5rem;
}

.c2 p:last-child {
  padding-bottom: 0;
}

<div
  class="c0"
>
  <h2
    class="c1"
  >
    heading
  </h2>
  <div
    class="c2"
  >
    body
  </div>
</div>
`;

exports[`it works with image 1`] = `
.c0 {
  border-bottom-style: solid;
  border-bottom-width: 4px;
  width: 100%;
  margin-bottom: 0.5rem;
  border-bottom-color: #fafafa;
}

<img
  alt="test"
  class="c0"
  src=""
/>
`;
